--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
   --wh: #ffffff;
   --body-bg: #f2f4f7;
   --primary: #7f56d9;
-  --primary-hover: #6941C6;
+  --primary-hover: #6941c6;
   --border-color: #d0d5dd;
   --text-box: rgb(100 116 139);
-  --focus-border: #D6BBFB;
-  --wh-sec: #FAF9F6;
+  --focus-border: #d6bbfb;
+  --wh-sec: #faf9f6;
 }
 html {
   scroll-behavior: smooth;
@@ -45,16 +45,17 @@ svg {
   max-width: 100%;
 }
 
-input, button {
+input,
+button {
   border: none;
   background-color: rgba(0%, 0%, 0%, 0);
 }
 
-input,button:is(:active, :focus) {
+input,
+button:is(:active, :focus) {
   border: none;
   outline: none;
 }
-
 
 input,
 button,
@@ -83,8 +84,6 @@ h6 {
   max-width: 100%;
   min-height: 100svh;
 }
-
-
 
 .navbar {
   background-color: var(--wh);
@@ -151,12 +150,15 @@ h6 {
   flex: 1;
 }
 
-.generate-tab__accordion,.scan-tab__accordion {
+.generate-tab__accordion,
+.scan-tab__accordion {
   border: 1px solid var(--border-color);
   font-size: 1rem;
   margin-top: 1rem;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  box-shadow:
+    0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
   background-color: var(--wh);
 }
 
@@ -199,7 +201,7 @@ h6 {
 }
 
 .open > .accordion__header {
-  border-radius: 0.25rem 0.25rem 0 0; 
+  border-radius: 0.25rem 0.25rem 0 0;
 }
 
 .open > .accordion__header > img {
@@ -218,8 +220,8 @@ h6 {
 .text-field > input {
   padding: 0.625rem 0.875rem 0.625rem 2.5rem;
   border-radius: 8px;
-  border: 1px solid var(--Gray-300, #D0D5DD);
-  background: var(--White, #FFF);
+  border: 1px solid var(--Gray-300, #d0d5dd);
+  background: var(--White, #fff);
   box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
   flex: 1;
   width: 100%;
@@ -230,14 +232,16 @@ h6 {
 .text-field > input:is(:active, :focus) {
   border: 1px solid var(--focus-border);
   background: var(--wh);
-  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #F4EBFF;
+  box-shadow:
+    0px 1px 2px 0px rgba(16, 24, 40, 0.05),
+    0px 0px 0px 4px #f4ebff;
 }
 
 .text-field::before {
-  content: '';
+  content: "";
   width: 1.5rem;
   height: 1.5rem;
-  background-image: url('/link.svg');
+  background-image: url("/link.svg");
   display: inline-block;
   position: absolute;
   top: 0.75rem;
@@ -269,17 +273,20 @@ h6 {
   outline-offset: 0.25rem;
 }
 
-.accordion__body > label {
+.accordion__body > label,
+span {
   font-weight: 600;
   color: var(--text-box);
 }
 
-#bg-color,#fg-color {
+#bg-color,
+#fg-color {
   height: 2.5rem;
   width: 2.5rem;
 }
 
-#bg-color-value,#fg-color-value {
+#bg-color-value,
+#fg-color-value {
   color: var(--text-box);
   background-color: var(--body-bg);
   width: 6rem;
@@ -301,7 +308,9 @@ h6 {
 
 .color-selectors > [type="text"]:is(:active, :focus) {
   border: 1px solid var(--focus-border);
-  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #F4EBFF;
+  box-shadow:
+    0px 1px 2px 0px rgba(16, 24, 40, 0.05),
+    0px 0px 0px 4px #f4ebff;
 }
 
 input[name="error-correction"] {
@@ -325,7 +334,6 @@ input[name="error-correction"]:checked + label {
   padding: 0.5rem;
   background-color: var(--focus-border);
   cursor: pointer;
-  
 }
 
 .error-level:nth-of-type(1) {
@@ -430,7 +438,7 @@ input[name="error-correction"]:checked + label {
   min-width: 80%;
 }
 
-.qr-content {
+#qr-content {
   background: var(--wh);
   padding: 0.5rem 1rem 0.5rem 1em;
   position: relative;
@@ -451,7 +459,7 @@ input[name="error-correction"]:checked + label {
 }
 
 .button-group > * {
-  padding: 0.5rem ;
+  padding: 0.5rem;
   margin: 0;
 }
 
@@ -467,7 +475,7 @@ input[name="error-correction"]:checked + label {
     max-height: 500px;
   }
 
-  .camera-container{
+  .camera-container {
     max-height: 576px;
     max-width: 576px;
   }
@@ -476,7 +484,7 @@ input[name="error-correction"]:checked + label {
     min-width: 40%;
   }
 
-  .tab-selector{
+  .tab-selector {
     position: static;
     margin-top: 1rem;
     display: inline-flex;
@@ -502,7 +510,7 @@ input[name="error-correction"]:checked + label {
     border-radius: 0 0.5rem 0.5rem 0;
   }
 
-  .generate-tab__accordions{
+  .generate-tab__accordions {
     flex: 1;
   }
 }
